; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_context.c_context_attach_depth_stencil_rb.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_context.c_context_attach_depth_stencil_rb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_gl_info = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 (i32, i32, i32, i32)* }

@WINED3D_FBO_ENTRY_FLAG_DEPTH = common dso_local global i32 0, align 4
@GL_DEPTH_ATTACHMENT = common dso_local global i32 0, align 4
@GL_RENDERBUFFER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"glFramebufferRenderbuffer()\00", align 1
@WINED3D_FBO_ENTRY_FLAG_STENCIL = common dso_local global i32 0, align 4
@GL_STENCIL_ATTACHMENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_gl_info*, i32, i32, i32)* @context_attach_depth_stencil_rb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @context_attach_depth_stencil_rb(%struct.wined3d_gl_info* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.wined3d_gl_info*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.wined3d_gl_info* %0, %struct.wined3d_gl_info** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %7, align 4
  %10 = load i32, i32* @WINED3D_FBO_ENTRY_FLAG_DEPTH, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %24

13:                                               ; preds = %4
  %14 = load %struct.wined3d_gl_info*, %struct.wined3d_gl_info** %5, align 8
  %15 = getelementptr inbounds %struct.wined3d_gl_info, %struct.wined3d_gl_info* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32 (i32, i32, i32, i32)*, i32 (i32, i32, i32, i32)** %16, align 8
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* @GL_DEPTH_ATTACHMENT, align 4
  %20 = load i32, i32* @GL_RENDERBUFFER, align 4
  %21 = load i32, i32* %8, align 4
  %22 = call i32 %17(i32 %18, i32 %19, i32 %20, i32 %21)
  %23 = call i32 @checkGLcall(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %24

24:                                               ; preds = %13, %4
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* @WINED3D_FBO_ENTRY_FLAG_STENCIL, align 4
  %27 = and i32 %25, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %40

29:                                               ; preds = %24
  %30 = load %struct.wined3d_gl_info*, %struct.wined3d_gl_info** %5, align 8
  %31 = getelementptr inbounds %struct.wined3d_gl_info, %struct.wined3d_gl_info* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  %33 = load i32 (i32, i32, i32, i32)*, i32 (i32, i32, i32, i32)** %32, align 8
  %34 = load i32, i32* %6, align 4
  %35 = load i32, i32* @GL_STENCIL_ATTACHMENT, align 4
  %36 = load i32, i32* @GL_RENDERBUFFER, align 4
  %37 = load i32, i32* %8, align 4
  %38 = call i32 %33(i32 %34, i32 %35, i32 %36, i32 %37)
  %39 = call i32 @checkGLcall(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %40

40:                                               ; preds = %29, %24
  ret void
}

declare dso_local i32 @checkGLcall(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
